# particle_collider

./: .gitignore  CMakeLists.txt  ParticleSimulator  README.md
include/: Boson.h  Cell.h  CellSpace.h  Constants.h  Dynamics.h  Fermion.h  Particle.h  SimulationToolBar.h  SimulationWindow.h  VectorMath.h
include/qt/: SimulationScene.h  SimulationToolBar.h  SimulationWindow.h
src/: Boson.cpp  Cell.cpp  CellSpace.cpp  Dynamics.cpp  Fermion.cpp  Particle.cpp  SimulationToolBar.cpp  SimulationWindow.cpp  VectorMath.cpp  main.cpp  main_bu.cpp
src/qt/: SimulationScene.cpp  SimulationToolBar.cpp  SimulationWindow.cpp
